_less/screen.less
/* ... */
.mainoverviews a{
	margin:5px 15px;
	display:inline-block;
}

.starttitle{
	text-align:center;
}
.starttitle a{
	padding:10px;
	border-bottom:1px solid #E2E2E2;
	font-size:155%;
	margin:20px auto;
	display:inline-block;
}
.start{
	text-align:left;
}
.start div{
	position:relative;
}
.start>div:first-child+div{
	border-top:1px solid #e0e0e0;
}
.start div div{
	display:inline-block;
	width:380px;
	vertical-align:top;
	padding-bottom:70px;
	position:static;
}
.start>div>div:first-child{
	padding-right:40px;
	border-right:1px solid #e0e0e0;
}
.start>div>div:first-child+div{
	padding-left:40px;
	border-left:1px solid #e0e0e0;
	margin-left:-1px;
}
.start div div div a,
.start div div div a:link,
.start div div div a:active,
.start div div div a:visited{
	display:inline-block;
	padding:6px 12px;
	font-size:115%;
	color:#fff;
	border:1px solid #d57700;
	background-color:#ee9209;
	background-image:-o-linear-gradient(bottom, #e28700 14%, #ee9209 70%);
	background-image:-moz-linear-gradient(bottom, #e28700 14%, #ee9209 70%);
	background-image:-webkit-linear-gradient(bottom, #e28700 14%, #ee9209 70%);
	background-image:-ms-linear-gradient(bottom, #e28700 14%, #ee9209 70%);
	background-image:linear-gradient(bottom, #e28700 14%, #ee9209 70%);
	-webkit-border-radius:3px;
	-moz-border-radius:3px;
	border-radius:3px;
}
.start div div div a:hover{
	background-image:none;
	color:#fff;
}
.start h2{
	color:#0d579b;
}
.start h2 span{
	font-size:200%;
	color:#ee9209;
}
.start div div div{
	display:block;
	width:auto;
	padding-bottom:0;
	position:absolute;
	bottom:35px;
}

.introlink{
	text-align:center;
	font-size:125%;
	font-weight:bold;
	margin-top:30px;
}

.titleicon{
	width:32px;
	height:32px;
	vertical-align:middle;
	margin-right:8px;
	position:relative;
	top:-2px;
}
.warningicon{
	width:42px;
	height:42px;
	vertical-align:middle;
	margin-right:6px;
}

.index,
.index ul,
.index li{
	list-style:none;
	padding:0;
	margin:0;
}
.index{
	padding:10px 20px;
	border:2px dashed #4892b2;
	display:inline-block;
}
.index ul{
	margin:10px 0;
}
.index li a{
	font-weight:bold;
}
.index ul ul li a{
	font-weight:normal;
}
.index a,
.index a:link,
.index a:active,
.index a:visited{
	display:block;
	text-decoration:none;
	line-height:1.5em;
}

.docreference{
	text-align:center;
	margin-bottom:40px;
}
.docreference a{
	display:inline-block;
	margin:0 15px;
	font-size:125%;
}
.docreference img{
	display:block;
	height:48px;
	width:48px;
	margin:0 auto 10px auto;
}
.docreference span{
	font-size:80%;
}
.toc{
	position:absolute;
	left:20px;
	text-align:left;
	padding-top:40px;
	margin-top:-40px;
}
.toc div{
	overflow-y:auto;
	overflow-x:hidden;
}
.toc div.scroll{
	position:fixed;
}
.toc ul,
.toc li{
	list-style:none;
	padding:0;
	margin:0;
}
.toc ul{
	width:220px;
	border-right:1px solid #e0e0e0;
	padding:0 20px 0 0;
}
.toc ul li ul{
	position:relative;
	top:0;
	padding:10px 0 0 0;
	border:0;
	display:none;
}
.toc ul li.active ul{
	display:block;
}
.toc ul li{
	padding:0 0 10px 0;
}
.toc ul li ul li{
	padding:0 0 4px 0;
}
.toc ul li ul li ul li{
	padding-left:10px;
}
.toc ul li a{
	padding-left:20px;
	font-weight:bold;
}
.toc ul li ul li a{
	font-weight:normal;
}
.toc ul li ul li a:hover:before,
.toc ul li ul li a.active:before{
	content:">";
	position:absolute;
	font-weight:bold;
	left:0px;
}
.toc a,
.toc a:link,
.toc a:active,
.toc a:visited{
	display:block;
	text-decoration:none;
	line-height:1.5em;
}
.toccontent{
	width:600px;
	margin:auto 0 auto auto;
	position:relative;
}
.toccontent h2{
	font-size:150%;
}
.toccontent h3{
	font-size:130%;
}
.toccontent h4{
	font-size:110%;
}
.toccontent h5,.toccontent h6{
	font-size:100%;
}
.toccontent img{
	max-width:100%;
}
.toccontent a.auto-link:link,
.toccontent a.auto-link:visited{
	color:#646464;
}
.toccontent p:hover a.auto-link:link,
.toccontent p:hover a.auto-link:visited{
	color:#2c6fad;
}
.toccontent p:hover a.auto-link:link:hover,
.toccontent p:hover a.auto-link:visited:hover{
	color:#63a4e1;
}
.toccontent a:link.term,
.toccontent a:visited.term,
.toccontent p:hover a.auto-link.term:link,
.toccontent p:hover a.auto-link.term:visited,
.toccontent p:hover a.auto-link.term:link:hover,
.toccontent p:hover a.auto-link.term:visited:hover{
	color:#000;
}
.toccontent a.term:link code,
.toccontent a.term:visited code{
	color:#646464;
}

.highlight  { background: #ffffff; }
.highlight .c { color: #999988; font-style: italic } /* Comment */
.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
.highlight .k { font-weight: bold } /* Keyword */
.highlight .o { font-weight: bold } /* Operator */
.highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
.highlight .cp { color: #999999; font-weight: bold } /* Comment.Preproc */
.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
.highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
.highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
.highlight .gd .x { color: #000000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
.highlight .ge { font-style: italic } /* Generic.Emph */
.highlight .gr { color: #aa0000 } /* Generic.Error */
.highlight .gh { color: #999999 } /* Generic.Heading */
.highlight .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
.highlight .gi .x { color: #000000; background-color: #aaffaa } /* Generic.Inserted.Specific */
.highlight .go { color: #888888 } /* Generic.Output */
.highlight .gp { color: #555555 } /* Generic.Prompt */
.highlight .gs { font-weight: bold } /* Generic.Strong */
.highlight .gu { color: #aaaaaa } /* Generic.Subheading */
.highlight .gt { color: #aa0000 } /* Generic.Traceback */
.highlight .kc { font-weight: bold } /* Keyword.Constant */
.highlight .kd { font-weight: bold } /* Keyword.Declaration */
.highlight .kp { font-weight: bold } /* Keyword.Pseudo */
.highlight .kr { font-weight: bold } /* Keyword.Reserved */
/* ... */

